# sds

./: CMakeLists.txt
cmake/: sdsConfig.cmake.in
include/: sds.h
src/: CMakeLists.txt
